--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public folder should not be ignored for Next.js projects
 
 # Vuepress build output
 .vuepress/dist
