--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "6.18.2",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.3.1",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
